# text-suicide-ideation-detection

./: README.md  pyproject.toml
dataset/: final_dataset.xlsx
main/: api_access.env  lstm.ipynb  preprocessed_10k.xlsx  preprocessing.ipynb  stemmed.xlsx  stemming_and_stopwords_comparison.ipynb  stopwords.xlsx  twitter_crawl_data.ipynb
